--- a/app/+page.jinja
+++ b/app/+page.jinja
@@ -1,7 +1,19 @@
 {% extends "base.jinja" %}
 
 {% block content %}
-<h1>Welcome to FastApp!</h1>
-<p>This is a simple FastAPI application using FastApp.</p>
-<p>FastApp is a framework that simplifies FastAPI development.</p>
+<main class="container">
+    <div class="content">
+        <h1>Welcome to FastApp!</h1>
+        <p>This is a simple FastAPI application using FastApp.</p>
+        <p>FastApp is a framework that simplifies FastAPI development.</p>
+    </div>
+</main>
+
+<style>
+    div.content {
+        margin-top: 10rem;
+        padding: 1rem;
+        text-align: center;
+    }
+</style>
 {% endblock %}
